# jcode-ide-py

./: README.md  justfile  pyproject.toml
design/: 01-core-concepts.md  02-core-arch.md  03-api-and-usage.md  04-feature-mcp-protocol.md  05-feature-diff-view.md  06-feature-ide-discovery.md  07-feature-async-client.md  08-feature-bearer-auth.md  09-feature-editor-state.md  10-feature-editor-state-query.md  11-feature-bearer-auth.md  12-feature-process-alive-check.md  13-feature-error-handling.md
docs/: complex-issues.md  overview.md  simple-issues.md
src/jcode_ide/: __init__.py  _logging.py  client.py  discovery.py  fallback.py  protocol.py
src/jcode_ide/tests/: test_fallback.py
