[project]
name = "jcode-ide-py"
version = "0.1.0"
description = "IDE integration client extracted from jcode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcode_ide"]

[tool.pytest.ini_options]
testpaths = ["src/jcode_ide/tests"]

[tool.ruff]
line-length = 140

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ALL"]
"**/tests/**" = ["ALL"]
"**/test_*.py" = ["ALL"]
"e2e/**" = ["ALL"]
"**/e2e/**" = ["ALL"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]
